--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+asgiref==3.11.0
 Django==5.2.8
+django-cors-headers==4.9.0
+django-sslserver==0.22
 djangorestframework==3.16.1
-django-cors-headers
+djangorestframework_simplejwt==5.5.1
+PyJWT==2.10.1
+sqlparse==0.5.5
+tzdata==2025.3
 
 # per frontend
 # installare nodejs da sito
